...
                allowedContentTypes: [.image],
                allowsMultipleSelection: true
            ) { result in
                onImportFiles(result)
            }
            .confirmationDialog("", isPresented: $isDraftCloseDialogPresented, titleVisibility: .hidden) {
                Button("Ignore Draft", role: .destructive, action: onIgnoreDraft)
                Button("Save Draft", action: onSaveDraft)
                Button("Cancel", role: .cancel) {}
            }
            .sheet(isPresented: $isDraftsViewPresented) {
                ComposeDraftsView(
                    drafts: savedDrafts,
                    onDelete: onDeleteDrafts,
...
