...
    case post
    case reply
    case quote

    var title: String {
        switch self {
        case .post: "Compose"
        case .reply: "Reply"
        case .quote: "Quote"
        }
    }

    var placeholder: String {
...
        case .quote: "Add a comment..."
        }
    }

    var actionTitle: String {
        switch self {
        case .post: "Post"
        case .reply: "Reply"
        case .quote: "Quote"
        }
    }
}

...
